--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <a href="#contact">Kontak</a>
       </div>
 
-      <div class="navbar-extra">
+      <!-- <div class="navbar-extra">
         <a href="search.html" id="search"><i data-feather="search"></i></a>
         <a href="shopcard.html" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-      </div>
+      </div> -->
     </nav>
 
     <!-- navbar end -->
@@ -99,12 +99,14 @@
         <div class="menu-card">
           <img src="img/menu/infused.jpg" alt="Infused" class="menu-card-img" />
           <h3 class="menu-card-title">-Infused Water-</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <p class="menu-card-price">IDR 15K</p> 
+          <button>Beli</button>
         </div>
         <div class="menu-card">
           <img src="img/menu/cofe.jpg" alt="Kopi" class="menu-card-img" />
           <h3 class="menu-card-title">-kopi-</h3>
           <p class="menu-card-price">IDR 10K</p>
+          <button>Beli</button>
         </div>
       </div>
     </section>
