Menambahkan halaman keranjang untuk checkout produk

--- a/marketplace.html
+++ b/marketplace.html
@@ -72,6 +72,12 @@
     </section>
     <!-- marketplace section end -->
 
+    <!-- Floating Cart Button -->
+    <a href="shopcard.html" class="floating-cart">
+      <i data-feather="shopping-cart"></i>
+      <span id="cart-count">0</span>
+    </a>
+
     <!-- footer section start -->
     <footer>
       <div class="socials">
